methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs:3: error: type mismatch;
 found   : Int.type
 required: Int
  for (i <- 1 to Int) {
                 ^